--- a/src/main/resources/templates/dashboard/index.html
+++ b/src/main/resources/templates/dashboard/index.html
@@ -1,5 +1,9 @@
 <!doctype html>
-<html lang="en">
+
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{dashboard/layout/master}">
 
 <head>
     <base href="/dashboard/">
@@ -7,7 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Language" content="en">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>Dashboard | Admin - Cloud Kitchen - TechWiz 2021 @ CODEDY</title>
+    <title>Dashboard</title>
 
     <!-- Favicons -->
     <link rel="shortcut icon" href="../favicon-admin.png">
@@ -26,213 +30,11 @@
 </head>
 
 <body>
-<div class="app-container app-theme-white body-tabs-shadow fixed-header fixed-sidebar">
-    <div class="app-header header-shadow">
-        <div class="app-header__logo">
-            <div class="logo-src"></div>
-            <div class="header__pane ml-auto">
-                <div>
-                    <button type="button" class="hamburger close-sidebar-btn hamburger--elastic"
-                            data-class="closed-sidebar">
-                            <span class="hamburger-box">
-                                <span class="hamburger-inner"></span>
-                            </span>
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="app-header__mobile-menu">
-            <div>
-                <button type="button" class="hamburger hamburger--elastic mobile-toggle-nav">
-                        <span class="hamburger-box">
-                            <span class="hamburger-inner"></span>
-                        </span>
-                </button>
-            </div>
-        </div>
-        <div class="app-header__menu">
-                <span>
-                    <button type="button"
-                            class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
-                        <span class="btn-icon-wrapper">
-                            <i class="fa fa-ellipsis-v fa-w-6"></i>
-                        </span>
-                    </button>
-                </span>
-        </div>
-        <div class="app-header__content">
-            <div class="app-header-right">
-                <div class="header-btn-lg pr-0">
-                    <div class="widget-content p-0">
-                        <div class="widget-content-wrapper">
-                            <div class="widget-content-left">
-                                <div class="btn-group">
-                                    <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                                       class="p-0 btn">
-                                        <img width="42" class="rounded-circle"
-                                             src="../front/data-images/user/admin.jpg"
-                                             alt="">
-                                        <i class="fa fa-angle-down ml-2 opacity-8"></i>
-                                    </a>
-                                    <div tabindex="-1" role="menu" aria-hidden="true"
-                                         class="rm-pointers dropdown-menu-lg dropdown-menu dropdown-menu-right">
-                                        <div class="dropdown-menu-header">
-                                            <div class="dropdown-menu-header-inner bg-info">
-                                                <div class="menu-header-image opacity-2"
-                                                     style="background-image: url('../dashboard/assets/images/dropdown-header/city3.jpg');">
-                                                </div>
-                                                <div class="menu-header-content text-left">
-                                                    <div class="widget-content p-0">
-                                                        <div class="widget-content-wrapper">
-                                                            <div class="widget-content-left mr-3">
-                                                                <img width="42" class="rounded-circle"
-                                                                     src="../front/data-images/user/admin.jpg"
-                                                                     alt="">
-                                                            </div>
-                                                            <div class="widget-content-left">
-                                                                <div
-                                                                        class="widget-heading">Admin
-                                                                </div>
-                                                                <div class="widget-subheading opacity-8">
-
-                                                                </div>
-                                                            </div>
-                                                            <div class="widget-content-right mr-2">
-                                                                <a href="../admin/logout"
-                                                                   class="btn-pill btn-shadow btn-shine btn btn-focus">
-                                                                    Logout
-                                                                </a>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="widget-content-left  ml-3 header-user-info">
-                                <div class="widget-heading">Admin</div>
-                                <div class="widget-subheading">
-                                    System administrator account
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="app-main">
-        <div class="app-sidebar sidebar-shadow">
-            <div class="app-header__logo">
-                <div class="logo-src"></div>
-                <div class="header__pane ml-auto">
-                    <div>
-                        <button type="button" class="hamburger close-sidebar-btn hamburger--elastic"
-                                data-class="closed-sidebar">
-                                <span class="hamburger-box">
-                                    <span class="hamburger-inner"></span>
-                                </span>
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="app-header__mobile-menu">
-                <div>
-                    <button type="button" class="hamburger hamburger--elastic mobile-toggle-nav">
-                            <span class="hamburger-box">
-                                <span class="hamburger-inner"></span>
-                            </span>
-                    </button>
-                </div>
-            </div>
-            <div class="app-header__menu">
-                    <span>
-                        <button type="button"
-                                class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
-                            <span class="btn-icon-wrapper">
-                                <i class="fa fa-ellipsis-v fa-w-6"></i>
-                            </span>
-                        </button>
-                    </span>
-            </div>
-            <div class="scrollbar-sidebar">
-                <div class="app-sidebar__inner">
-
-                    <ul class="vertical-nav-menu pt-3">
-                        <li>
-                            <a href="../admin"
-                               class="mm-active">
-                                <i class="metismenu-icon pe-7s-rocket"></i>
-                                Dashboard
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/report"
-                               class="">
-                                <i class="metismenu-icon pe-7s-display2"></i>
-                                Report
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/feedback"
-                               class="">
-                                <i class="metismenu-icon pe-7s-light"></i>
-                                Feedback
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/order"
-                               class="">
-                                <i class="metismenu-icon pe-7s-shopbag"></i>
-                                Order
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/product"
-                               class="">
-                                <i class="metismenu-icon pe-7s-plugin"></i>
-                                Product
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/category"
-                               class="">
-                                <i class="metismenu-icon pe-7s-ticket"></i>
-                                Category
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/restaurant"
-                               class="">
-                                <i class="metismenu-icon pe-7s-map-2"></i>
-                                Restaurant
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/user"
-                               class="">
-                                <i class="metismenu-icon pe-7s-users"></i>
-                                User
-                            </a>
-                        </li>
-                    </ul>
-
-                </div>
-            </div>
-        </div>
-
-        <div class="app-main__outer">
-
 
             <!--  MAIN HERE -->
 
-
             <!-- Main -->
-            <div class="app-main__inner">
+            <div layout:fragment="content" class="app-main__inner">
                 <div class="app-page-title">
                     <div class="page-title-wrapper">
                         <div class="page-title-heading">
@@ -812,17 +614,6 @@
 
             <!--  end MAIN HERE -->
 
-        </div>
-    </div>
-
-</div>
-<div class="app-drawer-overlay d-none animated fadeIn"></div>
-
-<script src="../dashboard/assets/scripts/jquery-3.2.1.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-<script type="text/javascript" src="../dashboard/assets/scripts/main.js"></script>
-<script type="text/javascript" src="../dashboard/assets/scripts/my_script.js"></script>
 </body>
 
 </html>
