--- a/src/main/resources/templates/dashboard/layout/master.html
+++ b/src/main/resources/templates/dashboard/layout/master.html
@@ -162,70 +162,9 @@
                         </button>
                     </span>
             </div>
-            <div class="scrollbar-sidebar">
-                <div class="app-sidebar__inner">
 
-                    <ul class="vertical-nav-menu pt-3">
-                        <li>
-                            <a href="../admin"
-                               class="mm-active">
-                                <i class="metismenu-icon pe-7s-rocket"></i>
-                                Dashboard
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/report"
-                               class="">
-                                <i class="metismenu-icon pe-7s-display2"></i>
-                                Report
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/feedback"
-                               class="">
-                                <i class="metismenu-icon pe-7s-light"></i>
-                                Feedback
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/order"
-                               class="">
-                                <i class="metismenu-icon pe-7s-shopbag"></i>
-                                Order
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/product"
-                               class="">
-                                <i class="metismenu-icon pe-7s-plugin"></i>
-                                Product
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/category"
-                               class="">
-                                <i class="metismenu-icon pe-7s-ticket"></i>
-                                Category
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/restaurant"
-                               class="">
-                                <i class="metismenu-icon pe-7s-map-2"></i>
-                                Restaurant
-                            </a>
-                        </li>
-                        <li>
-                            <a href="../admin/user"
-                               class="">
-                                <i class="metismenu-icon pe-7s-users"></i>
-                                User
-                            </a>
-                        </li>
-                    </ul>
+            <div th:replace="dashboard/layout/fragments/sidebar :: sidebar"></div>
 
-                </div>
-            </div>
         </div>
 
         <div class="app-main__outer">
