--- a/src/main/resources/templates/dashboard/product/index.html
+++ b/src/main/resources/templates/dashboard/product/index.html
@@ -68,7 +68,7 @@
                                     <div class="input-group">
                                         <input type="search" name="search" id="search"
                                                placeholder="Search ..." class="form-control"
-                                               value="">
+                                               th:value="${param.search}">
                                         <span class="input-group-append">
                                                 <button type="submit" class="btn btn-primary">
                                                     <i class="fa fa-search"></i>&nbsp;
