--- a/src/main/resources/templates/dashboard/product/index.html
+++ b/src/main/resources/templates/dashboard/product/index.html
@@ -67,7 +67,7 @@
                                 <form>
                                     <div class="input-group">
                                         <input type="search" name="search" id="search"
-                                               placeholder="Search ..." class="form-control"
+                                               placeholder="Search by name..." class="form-control"
                                                th:value="${param.search}">
                                         <span class="input-group-append">
                                                 <button type="submit" class="btn btn-primary">
