--- a/src/main/resources/templates/dashboard/product/show.html
+++ b/src/main/resources/templates/dashboard/product/show.html
@@ -52,7 +52,7 @@
 
                 <ul class="body-tabs body-tabs-layout tabs-animated body-tabs-animated nav">
                     <li class="nav-item">
-                        <a href="../../admin/product/59/edit" class="nav-link">
+                        <a th:href="@{|/admin/product/${product.id}/edit|}" class="nav-link">
                                 <span class="btn-icon-wrapper pr-2 opacity-8">
                                     <i class="fa fa-edit fa-w-20"></i>
                                 </span>
@@ -61,16 +61,14 @@
                     </li>
 
                     <li class="nav-item delete">
-                        <form class="d-inline" action="http://127.0.0.1:8000/admin/product/59" method="post">
-                            <input type="hidden" name="_token" value="zHFtvpYPcCMdmPw2mfFlT0T1eNnqG0I2460gbDIS">                    <input type="hidden" name="_method" value="DELETE">                    <button class="btn nav-link"
-                                                                                                                                                                                                                   type="submit" data-toggle="tooltip" title="Delete"
-                                                                                                                                                                                                                   data-placement="bottom"
-                                                                                                                                                                                                                   onclick="return confirm('Do you really want to delete this item?')">
-                                                            <span class="btn-icon-wrapper opacity-8">
-                                                                <i class="fa fa-trash fa-w-20"></i>
-                                                            </span>
-                            <span class="ml-1"> Delete</span>
-                        </button>
+                        <form class="d-inline" th:action="@{|/admin/product/${product.id}|}" method="post">
+                            <button class="btn nav-link"
+                                    onclick="return confirm('Do you really want to delete this item?')">
+                                <span class="btn-icon-wrapper opacity-8">
+                                    <i class="fa fa-trash fa-w-20"></i>
+                                </span>
+                                <span class="ml-1"> Delete</span>
+                            </button>
                         </form>
                     </li>
                 </ul>
