UPDATE: admin/product/show: hiện thị tên thay vì ID -  dùng Relationship

--- a/src/main/resources/templates/dashboard/product/show.html
+++ b/src/main/resources/templates/dashboard/product/show.html
@@ -102,13 +102,13 @@
                                         Category
                                     </label>
                                     <div class="col-md-9 col-xl-8">
-                                        <p th:text="${product.productCategoryId}"></p>
+                                        <p th:text="${product.productCategory.name}"></p>
                                     </div>
                                 </div>
                                 <div class="position-relative row form-group">
                                     <label for="email" class="col-md-3 text-md-right col-form-label">Restaurant</label>
                                     <div class="col-md-9 col-xl-8">
-                                        <p th:text="${product.restaurantId}"></p>
+                                        <p th:text="${product.restaurant.name}"></p>
                                     </div>
                                 </div>
 
