--- a/src/main/resources/templates/dashboard/product/create-edit.html
+++ b/src/main/resources/templates/dashboard/product/create-edit.html
@@ -55,7 +55,8 @@
                             <div class="card-body">
 
                                 <form method="post" enctype="multipart/form-data"
-                                      th:action="@{|/admin/product/${product.id}|}" th:object="${product}">
+                                      th:action="${#request.requestURI.endsWith('/create')} ? @{|/admin/product/create|} : @{|/admin/product/${product.id}|} "
+                                      th:object="${product}">
 
                                     <input type="hidden" th:field="*{id}">
                                     <input type="hidden" th:field="*{image}">
