--- a/src/main/resources/templates/dashboard/product/index.html
+++ b/src/main/resources/templates/dashboard/product/index.html
@@ -131,8 +131,8 @@
                                                             <i class="fa fa-edit fa-w-20"></i>
                                                         </span>
                                             </a>
-                                            <form class="d-inline" th:action="@{|/admin/product/${product.id}|}"
-                                                  method="post">
+                                            <form class="d-inline"
+                                                  th:action="@{|/admin/product/${product.id}|}" th:method="DELETE">
                                                 <button class="btn btn-hover-shine btn-outline-danger border-0 btn-sm"
                                                     onclick="return confirm('Do you really want to delete this item?')">
                                                         <span class="btn-icon-wrapper opacity-8">
